World Sampling in Cycles broken when rendering with GPU #47213

Closed
opened 2016-01-20 12:14:28 +01:00 by Sebastian Koenig · 22 comments

System Information
elementaryOS 0.3.2, GTX970

Blender Version
Broken: 2.76.8 a6eae73
Worked: 2.76.5, 90250f8

Short description of error
When rendering with Branched Path Tracing on the GPU using an HDR the World Samples setting is ignored.

Exact steps for others to reproduce the error
Render the attached file. It has world samples set to 24. Now render with world samples set to 1. It looks the same. If you try it with CPU you get the expected result, 24 samples looking much better than just 1 (also renders much longer).
square_samples.blend

**System Information** elementaryOS 0.3.2, GTX970 **Blender Version** Broken: 2.76.8 a6eae73 Worked: 2.76.5, 90250f8 **Short description of error** When rendering with Branched Path Tracing on the GPU using an HDR the World Samples setting is ignored. **Exact steps for others to reproduce the error** Render the attached file. It has world samples set to 24. Now render with world samples set to 1. It looks the same. If you try it with CPU you get the expected result, 24 samples looking much better than just 1 (also renders much longer). [square_samples.blend](https://archive.blender.org/developer/F275306/square_samples.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

#47474 was marked as duplicate of this issue

#47474 was marked as duplicate of this issue
Thomas Dinges was assigned by Sebastian Koenig 2016-01-20 15:28:10 +01:00

I cannot confirm this issue on Windows, with a Geforce 540M.
The render on GPU equals the one on CPU. Lowering the World samples changes the result, so does disabling World MIS.

Can you maybe attach screenshots of the settings + render?

I cannot confirm this issue on Windows, with a Geforce 540M. The render on GPU equals the one on CPU. Lowering the World samples changes the result, so does disabling World MIS. Can you maybe attach screenshots of the settings + render?

Note, that the Lamp samples only have an effect when "Sample All Lights (Direct and/or Indirect) is enabled. Otherwise it will just use 1 sample. That should probably be reflected in the UI.

Anyway, Sample All Lights Direct is enabled in the uploaded file, so it works as expected here. I didn't change settings (apart from Render Tile Size).

Note, that the Lamp samples only have an effect when "Sample All Lights (Direct and/or Indirect) is enabled. Otherwise it will just use 1 sample. That should probably be reflected in the UI. Anyway, Sample All Lights Direct is enabled in the uploaded file, so it works as expected here. I didn't change settings (apart from Render Tile Size).

This issue was referenced by adcef2bd36

This issue was referenced by adcef2bd3686a887fba8f08192751ab6736b9782

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

I get the same problem on OSX 10.11.2 with a GTX980.
Rendering the file from this bugreport renders the same as with just 1 sample in world settings, even though it is set to 24.
Rendering the same file with 2.76 behaves as expected and renders with 24 world samples.

I get the same problem on OSX 10.11.2 with a GTX980. Rendering the file from this bugreport renders the same as with just 1 sample in world settings, even though it is set to 24. Rendering the same file with 2.76 behaves as expected and renders with 24 world samples.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Could it be because I compile with Cuda 7.5?

Edit: Ah, there we go, with buildbot build it works fine. Hm... I didn't remember getting the same issue before. Did something change there recently?
But I guess using Cuda 7.5 is my own risk... ;)

Could it be because I compile with Cuda 7.5? Edit: Ah, there we go, with buildbot build it works fine. Hm... I didn't remember getting the same issue before. Did something change there recently? But I guess using Cuda 7.5 is my own risk... ;)

Since it works with official builds and CUDA 6.5, will triage this as Low priority. Still we should look into it at some point.

Since it works with official builds and CUDA 6.5, will triage this as Low priority. Still we should look into it at some point.

This issue was referenced by blender/cycles@2c5b6dc54b

This issue was referenced by blender/cycles@2c5b6dc54b044225d44d5d0aecd851d4376d51cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Now that we are on Toolkit 7.5, this should be fixed.

Now that we are on Toolkit 7.5, this should be fixed.

Added subscribers: @mib2berlin, @ditos

Added subscribers: @mib2berlin, @ditos

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

Hey @Sergey, I tried some random things and found a stupid workaround that seems to work here. I went ahead and committed it so that it's included in todays buildbot build for testing, but feel free to revert or modify it if you find something better or if it gives issues.

Hey @Sergey, I tried some random things and found a stupid workaround that seems to work here. I went ahead and committed it so that it's included in todays buildbot build for testing, but feel free to revert or modify it if you find something better or if it gives issues.

@brecht, interesting. I've tried same workaround initially and it didn't work. However, your commit seems to be fine here on GTX980 in the studio. Maybe it should be both noinline and int which i didn't test yesterday, hrrrm.

@sebastian_k, mind testing latest linux builds?

@brecht, interesting. I've tried same workaround initially and it didn't work. However, your commit seems to be fine here on GTX980 in the studio. Maybe it should be both `noinline` and `int` which i didn't test yesterday, hrrrm. @sebastian_k, mind testing latest linux builds?
Author
Member

That does indeed fix the issue! Plus, it renders faster :)
With own build (cuda 6.5) i get 9.9secs without sample all indirect, and 45.7 with sample all indirect.
With buildbot (cuda 7.5) i get 8.5secs without sample all indirect, and 41 sec with sample all indirect.
Tested rendering with gtx970, 980 and 980ti
So, yay!
Thanks @brecht!

That does indeed fix the issue! Plus, it renders faster :) With own build (cuda 6.5) i get 9.9secs without sample all indirect, and 45.7 with sample all indirect. With buildbot (cuda 7.5) i get 8.5secs without sample all indirect, and 41 sec with sample all indirect. Tested rendering with gtx970, 980 and 980ti So, yay! Thanks @brecht!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Finally it's nailed down! Thanks for the report and help!

Finally it's nailed down! Thanks for the report and help!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47213
No description provided.