Cycles: Fix wrong sample all direct/indirect settings on sm_50 and higher

Seems to be some compiler fault which leads to a wrong flag being used,
making it so wrong number of samples is used for the background.

This should in theory fix issue reported in T47213.