intern/cycles/kernel/kernel_path_surface.h
@@ -19,7 +19,7 @@ CCL_NAMESPACE_BEGIN
 #if defined(__BRANCHED_PATH__) || defined(__SUBSURFACE__)
 
 /* branched path tracing: connect path directly to position on one or more lights and add it to L */
-ccl_device void kernel_branched_path_surface_connect_light(KernelGlobals *kg, RNG *rng,
+ccl_device_noinline void kernel_branched_path_surface_connect_light(KernelGlobals *kg, RNG *rng,
 	ShaderData *sd, PathState *state, float3 throughput, float num_samples_adjust, PathRadiance *L, bool sample_all_lights)
 {
 #ifdef __EMISSION__
